project-assessment-site/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-assessment-site
  namespace: test
  labels:
    app: project-assessment-site
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-assessment-site
  template:
    metadata:
      labels:
        app: project-assessment-site
    spec:
      containers:
      - name: project-assessment-site
        image: amerahsultan1/project-assessment-site
        ports:
        - containerPort: 80
